--- a/patient-appointment-api.yml
+++ b/patient-appointment-api.yml
@@ -421,7 +421,7 @@ components:
             \ yyyy-MM-dd. Only panels generated on or after this date will include\
             \ this patient."
           format: date
-          example: 2024-11-05
+          example: "2024-11-05"
         endDate:
           type: string
           description: "Date the patient will stop being monitored, in ISO-8601 format\
@@ -429,7 +429,7 @@ components:
             \ will include this patient"
           format: date
           nullable: true
-          example: 2025-11-05
+          example: "2025-11-05"
         batchId:
           pattern: "[^<>\"%;+@]*$"
           type: string
@@ -460,7 +460,7 @@ components:
           example:
             - code: "401.1"
               displayName: Benign essential hypertension
-              date: 2023-12-12
+              date: "2023-12-12"
           items:
             $ref: "#/components/schemas/Diagnosis"
         activeSnomedDiagnoses:
@@ -472,7 +472,7 @@ components:
           example:
             - code: "34713006"
               displayName: Vitamin D deficiency
-              date: 2023-11-12
+              date: "2023-11-12"
           items:
             $ref: "#/components/schemas/Diagnosis"
         medications:
@@ -507,7 +507,7 @@ components:
           type: string
           description: Date the note was recorded or written.
           format: date
-          example: 2022-12-12
+          example: "2022-12-12"
         code:
           description: Type of note content. Should come from https://vsac.nlm.nih.gov/valueset/2.16.840.1.113883.11.20.9.68/expansion/Latest
           example:
@@ -622,7 +622,7 @@ components:
           type: string
           description: Date of the problem (onset or diagnosed)
           format: date
-          example: 2022-12-12
+          example: "2022-12-12"
     Diagnosis_1:
       required:
         - active
@@ -654,7 +654,7 @@ components:
           type: string
           description: Date of the problem (onset or diagnosed)
           format: date
-          example: 2022-12-12
+          example: "2022-12-12"
         active:
           type: boolean
           description: Whether the diagnosis is still active or not
