--- a/patient-appointment-api.yml
+++ b/patient-appointment-api.yml
@@ -7,8 +7,10 @@ info:
     name: Connective Health Tech Support
     url: https://connectivehealth.io
     email: techsupport@connectivehealth.io
-  version: 3.1.0
+  version: 3.2.0
 servers:
+  - url: http://localhost:8168/
+    description: Local testing only
   - url: https://processing-request-staging.connectivehealth.io/
     description: Customer testing site. Test data only. No PHI.
   - url: https://processing-request-production.connectivehealth.io/
@@ -453,7 +455,7 @@ components:
             \ yyyy-MM-dd. Only panels generated on or after this date will include\
             \ this patient."
           format: date
-          example: "2024-11-05"
+          example: 2024-11-05
         endDate:
           type: string
           description: "Date the patient will stop being monitored, in ISO-8601 format\
@@ -461,7 +463,7 @@ components:
             \ will include this patient"
           format: date
           nullable: true
-          example: "2025-11-05"
+          example: 2025-11-05
         batchId:
           pattern: "[^<>\"%;+@]*$"
           type: string
@@ -492,7 +494,7 @@ components:
           example:
             - code: "401.1"
               displayName: Benign essential hypertension
-              date: "2023-12-12"
+              date: 2023-12-12
           items:
             $ref: "#/components/schemas/Diagnosis"
         activeSnomedDiagnoses:
@@ -504,7 +506,7 @@ components:
           example:
             - code: "34713006"
               displayName: Vitamin D deficiency
-              date: "2023-11-12"
+              date: 2023-11-12
           items:
             $ref: "#/components/schemas/Diagnosis"
         medications:
@@ -539,7 +541,7 @@ components:
           type: string
           description: Date the note was recorded or written.
           format: date
-          example: "2022-12-12"
+          example: 2022-12-12
         code:
           description: Type of note content. Should come from https://vsac.nlm.nih.gov/valueset/2.16.840.1.113883.11.20.9.68/expansion/Latest
           example:
@@ -654,7 +656,7 @@ components:
           type: string
           description: Date of the problem (onset or diagnosed)
           format: date
-          example: "2022-12-12"
+          example: 2022-12-12
     Diagnosis_1:
       required:
         - active
@@ -686,7 +688,7 @@ components:
           type: string
           description: Date of the problem (onset or diagnosed)
           format: date
-          example: "2022-12-12"
+          example: 2022-12-12
         active:
           type: boolean
           description: Whether the diagnosis is still active or not
@@ -814,6 +816,11 @@ components:
         renal:
           type: boolean
           description: Renal diagnostic information is desired for the patient
+          example: false
+          default: false
+        stroke:
+          type: boolean
+          description: Stroke diagnostic information is desired for the patient
           example: false
           default: false
         toxicological:
@@ -1183,7 +1190,7 @@ components:
           type: string
           description: "Date the medication was prescribed, in ISO-8601 format yyyy-MM-dd"
           format: date
-          example: "2023-12-02"
+          example: 2023-12-02
         prescriber:
           description: Prescriber of the medication
           allOf:
@@ -1302,7 +1309,7 @@ components:
           type: string
           description: Birth date of the patient in ISO-8601 format yyyy-MM-dd
           format: date
-          example: "1992-04-09"
+          example: 1992-04-09
         address:
           $ref: "#/components/schemas/Address"
         contactPoints:
@@ -1380,7 +1387,7 @@ components:
           type: string
           description: Date of the appointment in ISO-8601 format yyyy-MM-dd
           format: date
-          example: "2025-11-05"
+          example: 2025-11-05
         requestingProvider:
           $ref: "#/components/schemas/Provider"
         clinicName:
@@ -1475,7 +1482,7 @@ components:
           example:
             - code: "401.1"
               displayName: Benign essential hypertension
-              date: "2023-12-12"
+              date: 2023-12-12
           items:
             $ref: "#/components/schemas/Diagnosis"
         activeSnomedDiagnoses:
@@ -1487,7 +1494,7 @@ components:
           example:
             - code: "34713006"
               displayName: Vitamin D deficiency
-              date: "2023-11-12"
+              date: 2023-11-12
           items:
             $ref: "#/components/schemas/Diagnosis"
         medications:
@@ -1532,7 +1539,7 @@ components:
           type: string
           description: Birth date of the patient in ISO-8601 format yyyy-MM-dd
           format: date
-          example: "1992-04-09"
+          example: 1992-04-09
         addresses:
           minItems: 1
           type: array
@@ -1552,12 +1559,12 @@ components:
           type: string
           description: "Beginning of the period, inclusive"
           format: date
-          example: "2022-12-12"
+          example: 2022-12-12
         endDate:
           type: string
           description: "End of the period, inclusive"
           format: date
-          example: "2022-12-14"
+          example: 2022-12-14
       description: Period of time this encounter took place. If end date is not specified
         then it will be defaulted to the start date
     ProcessingResponse:
@@ -1604,7 +1611,7 @@ components:
           type: string
           description: Date of the appointment in ISO-8601 format yyyy-MM-dd
           format: date
-          example: "2024-11-05"
+          example: 2024-11-05
         upcomingAppointmentProvider:
           $ref: "#/components/schemas/Provider"
         clinicName:
@@ -1671,7 +1678,7 @@ components:
           example:
             - code: "401.1"
               displayName: Benign essential hypertension
-              date: "2023-12-12"
+              date: 2023-12-12
           items:
             $ref: "#/components/schemas/Diagnosis"
         activeSnomedDiagnoses:
@@ -1683,7 +1690,7 @@ components:
           example:
             - code: "34713006"
               displayName: Vitamin D deficiency
-              date: "2023-11-12"
+              date: 2023-11-12
           items:
             $ref: "#/components/schemas/Diagnosis"
         medications:
