--- a/patient-appointment-api.yml
+++ b/patient-appointment-api.yml
@@ -7,7 +7,7 @@ info:
     name: Connective Health Tech Support
     url: https://connectivehealth.io
     email: techsupport@connectivehealth.io
-  version: 3.4.1
+  version: 3.5.0
 servers:
   - url: https://processing-request-staging.connectivehealth.io/
     description: Customer testing site. Test data only. No PHI.
@@ -813,6 +813,11 @@ components:
           description: Men's Health diagnostic information is desired for the patient
           example: false
           default: false
+        metabolic:
+          type: boolean
+          description: Metabolic diagnostic information is desired for the patient
+          example: false
+          default: false
         musculoskeletal:
           type: boolean
           description: Musculoskeletal diagnostic information is desired for the patient
@@ -863,6 +868,11 @@ components:
         renal:
           type: boolean
           description: Renal diagnostic information is desired for the patient
+          example: false
+          default: false
+        spinal:
+          type: boolean
+          description: Spinal diagnostic information is desired for the patient
           example: false
           default: false
         stroke:
